@@ -1,3 +1,6 @@
+next
+	- Support re-entry into previously-unpacked archive directory
+
 v2.0.2 (February 2017)
 	- Fix -c archive creation for 7z/zip/rar/ar
 	- Fix non-root extracting of zip archives with different file owners
